gccida/g0/free_for_value_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/free_for_value_p/src/reload1.c:5472:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/free_for_value_p/src/reload1.c:5474:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/free_for_value_p/src/reload1.c:5520:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/free_for_value_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/free_for_value_p/src/reload1.c:5520:53: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT ) 
                                                    ^~~~~~~~~~~~
                                                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/free_for_value_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/free_for_value_p/src/obj/reload1.o] Error 1
